# roguewave

./: Cargo.toml  README.md  README.tpl  run_integration_tests.sh
.github/workflows/: Dockerfile  ci.yml  ci_ssh_key  ci_ssh_key.pub
examples/: http_server.conf  setup_http_server.rs
src/: command.rs  lib.rs  local.rs
src/recipes/: apt.rs  env.rs  mod.rs  postgres.rs  rsync.rs  user.rs
tests/: integration.rs  local.rs
