[package]
name = "roguewave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
fs-err = "2.11.0"
log = "0.4.21"
openssh = { version = "0.10.4", features = ["native-mux"] }
openssh-sftp-client = "0.14.3"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
type-map = "0.5.0"
