[package]
name = "roguewave"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/roguewave"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
async-trait = "0.1.80"
derive_more = "0.99.17"
format-sql-query = "0.4.0"
fs-err = "2.11.0"
log = "0.4.21"
openssh = { version = "0.10.4", features = ["native-mux"] }
openssh-sftp-client = "0.14.3"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
type-map = "0.5.0"

[dev-dependencies]
env_logger = "0.11.3"
