[package]
name = "roguewave"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Riateche/roguewave"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
format-sql-query = "0.4.0"
log = "0.4.21"
openssh = { version = "0.10.4", features = ["native-mux"] }
openssh-sftp-client = "0.14.3"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
type-map = "0.5.0"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.3"
async-trait = "0.1.80"
